# GameMasterJJ

./: .gitignore  CLAUDE.md  main.py  pyproject.toml
.claude/: settings.local.json
.playwright-mcp/: page-2026-04-12T10-02-13-735Z.yml  page-2026-04-12T10-05-26-321Z.yml  page-2026-04-12T10-08-55-489Z.yml  page-2026-04-12T10-13-55-861Z.yml  page-2026-04-12T10-16-56-837Z.yml  page-2026-04-12T10-26-42-611Z.yml  page-2026-04-12T10-40-24-736Z.yml  page-2026-04-12T10-40-46-831Z.yml  page-2026-04-12T11-00-14-957Z.yml  page-2026-04-12T11-06-54-319Z.yml  page-2026-04-12T11-07-07-721Z.yml  page-2026-04-12T11-14-33-186Z.yml  page-2026-04-12T11-16-12-185Z.yml  page-2026-04-12T11-16-18-149Z.yml  page-2026-04-12T11-16-30-122Z.yml  page-2026-04-12T11-17-57-764Z.yml  page-2026-04-12T11-23-43-227Z.yml  page-2026-04-12T11-24-25-015Z.yml  page-2026-04-12T11-26-44-127Z.yml  page-2026-04-12T11-27-30-652Z.yml  page-2026-04-12T11-33-40-584Z.yml  page-2026-04-12T11-33-56-555Z.yml  page-2026-04-12T11-36-58-331Z.yml  page-2026-04-12T11-41-41-183Z.yml  page-2026-04-12T12-01-32-446Z.yml  page-2026-04-12T12-12-48-243Z.yml  page-2026-04-12T12-18-42-720Z.yml
app/: web_viewer.py
backend/: .env.example  IMPLEMENTATION_STATUS.md  SUCCESS_REPORT.md  requirements.txt  simple_test.py  start.py  test_agents.py  test_game.py
docs/: 0_architecture.md  1_goal_scope_definition.md  2_detailed_functional_specification.md  3_ui_design_system.md  4_api_specification.md  5_data_model_schema.md  6_master_execution_plan.md  7_unit_Integration_Test.md  8_bug_report.md  db_schema.md
scripts/: boardlife_parser.py  (+9 more)
(+112 files in other folders)
